iPadImprovements - Improves CSS on mobile devices, especially on iPad - Disabled fullscreen for devices which don't support it (Basically only iOs mobile...) - Cleaned up CSS from generic css file to dedicated scss where it is not a shared style - Flattened various duplicate media queries - Fixed crash in quality picker

--- a/packages/fayr-ivp/src/components/App.module.scss
+++ b/packages/fayr-ivp/src/components/App.module.scss
@@ -1,4 +1,6 @@
+body,
+html,
 .App {
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
 }
