--- a/packages/fayr-ivp/src/index.css
+++ b/packages/fayr-ivp/src/index.css
@@ -33,7 +33,6 @@ html {
     scroll-behavior: smooth;
 }
 body {
-    min-height: 100vh;
     text-rendering: optimizeSpeed;
     line-height: 1.5;
 }
